--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# migrations content except __init__ shoudn't be in the GitHub repo
+migrations/
+!migrations/__init__
