--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,10 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+## Configuration files
+UdyniManagement/settings/production.py
+UdyniManagement/settings/development.py
+
+# Ignore .vscode directories
+.vscode
+*/.vscode/**
