--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-numpy==1.20.3
-lxml==4.6.3
-Django==3.2.5
-pandas==1.3.4
-psycopg2==2.9.3
-django-auth-ldap==4.0.0
-django-crispy-forms==1.14.0
-reportlab==3.5.68
-requests==2.26
+numpy>=1.20,<2.0
+lxml>=5,<6
+Django>=4.2,<4.3
+pandas>=1.3,<2.1
+psycopg>=3.0,<3.3
+django-auth-ldap>=4.0,<5
+django-crispy-forms>=2,<3
+crispy-bootstrap3>=2024
+reportlab>=3.5,<4
+requests>=2,<3
