--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pandas>=1.3,<2.1
 psycopg>=3.0,<3.3
 django-auth-ldap>=4.0,<5
 django-crispy-forms>=2,<3
-crispy-bootstrap3>=2024
+crispy-bootstrap4>=2024
 reportlab>=3.5,<4
 requests>=2,<3
+xlrd>=2.0.1
